# awto

./: Cargo.toml  DEVELOPERS.md  README.md
awto/: Cargo.toml
awto-cli/: Cargo.toml
awto-cli/src/: macros.rs  main.rs  util.rs
awto-cli/src/compile/: database.rs  mod.rs  protobuf.rs
awto-cli/src/templates/: README.md
awto-cli/src/templates/database/: Cargo.toml  build.rs
awto-cli/src/templates/protobuf/: Cargo.toml  build.rs
awto-compile/: Cargo.toml
awto-compile/src/: database.rs  error.rs  lib.rs  protobuf.rs  tests_cfg.rs  util.rs
awto-macros/: Cargo.toml
awto-macros/src/: attributes.rs  error.rs  lib.rs  util.rs
awto-macros/src/derives/: database_model.rs  mod.rs  model.rs  protobuf_model.rs
awto-macros/src/proc_macros/: mod.rs  protobuf_service.rs  schema.rs
awto-macros/src/proc_macros/schema/: database_table.rs  protobuf_message.rs
awto-schema/: Cargo.toml
awto-schema/src/: database.rs  lib.rs  prelude.rs  protobuf.rs
awto/src/: app.rs  database.rs  lib.rs  prelude.rs  protobuf.rs  schema.rs  service.rs  tests_cfg.rs
build-tools/: cargo-publish.sh
examples/: schema.rs
examples/ecom/: .env  Cargo.toml  build.rs
examples/ecom/awto/database/: Cargo.toml  build.rs
examples/ecom/awto/database/src/: lib.rs
examples/ecom/awto/protobuf/: build.rs
examples/ecom/awto/protobuf/src/: lib.rs
examples/ecom/client/: Cargo.toml
examples/ecom/client/src/: main.rs
examples/ecom/database/: Cargo.toml  build.rs
examples/ecom/database/src/: lib.rs
examples/ecom/graphql/: Cargo.toml
examples/ecom/graphql/src/: lib.rs  query.rs
examples/ecom/proto/: Cargo.toml
examples/ecom/schema/: Cargo.toml
examples/ecom/schema/src/: lib.rs
examples/ecom/server/: Cargo.toml
examples/ecom/server/src/: main.rs
examples/ecom/service/: Cargo.toml
examples/ecom/service/src/: lib.rs  product.rs
