[package]
name = "awto-cli"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = "3.0.0-beta.4"
colored = "2.0"
env_logger = "0.9"
heck = "0.3"
log = "0.4"
proc-macro2 = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0", features = ["parsing"] }
tokio = { version = "1.12", features = [
  "fs",
  "io-util",
  "macros",
  "process",
  "rt",
  "rt-multi-thread",
] }
toml = "0.5"
toml_edit = "0.6"
