[package]
name = "awto-cli"
version = "0.1.2"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
edition = "2018"
description = "Awto cli for compiling microservices"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/awto-rs/awto"
categories = [
  "command-line-utilities",
  "compilers",
  "database",
  "encoding",
  "parsing",
]
keywords = ["awto", "database", "protobuf", "schema", "macros"]

[[bin]]
name = "awto"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = "3.0.0-beta.5"
colored = "2.0"
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.12", features = [
  "fs",
  "io-util",
  "macros",
  "process",
  "rt",
  "rt-multi-thread",
] }
toml = "0.5"
toml_edit = "0.6"
