[package]
name = "awto-compile"
version = "0.1.0"
edition = "2018"

[dependencies]
awto = { path = "../awto" }
awto-schema = { path = "../awto-schema" }
chrono = "0.4"
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "1.0"
tokio = { version = "1.12", features = [
  "fs",
], default-features = false, optional = true }
tonic = "0.5"
tonic-build = "0.5"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.12", features = ["full"] }

[features]
default = []
async = ["tokio"]
