[package]
name = "awto-compile"
version = "0.1.0"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
edition = "2018"
description = "Compile microservices built with Awto"
license = "MIT OR Apache-2.0"
repository = "https://github.com/awto-rs/awto"
categories = [
  "compilers",
  "database",
  "development-tools",
  "encoding",
  "parsing",
]
keywords = ["awto", "database", "protobuf", "schema", "macros"]

[dependencies]
awto = { path = "../awto" }
chrono = "0.4"
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "1.0"
tokio = { version = "1.12", features = [
  "fs",
], default-features = false, optional = true }
tokio-stream = "0.1"
tonic = "0.5"
tonic-build = "0.5"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.12", features = ["full"] }

[features]
default = []
async = ["tokio"]
