[package]
name = "awto-macros"
version = "0.1.0"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
edition = "2018"
description = "Macros for Awto microservices"
license = "MIT OR Apache-2.0"
repository = "https://github.com/awto-rs/awto"
categories = [
  "compilers",
  "database",
  "development-tools",
  "encoding",
  "parsing",
]
keywords = ["awto", "database", "protobuf", "schema", "macros"]

[lib]
proc-macro = true

[dependencies]
better-bae = "0.1"
heck = "0.3"
paste = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "parsing"] }
