[package]
name = "service"
version = "0.1.0"
edition = "2018"

[dependencies]
awto = { path = "../../../awto" }
awto-schema = { path = "../../../awto-schema" }
chrono = "0.4"
database = { path = "../database" }
schema = { path = "../schema" }
tonic = "0.5"
uuid = { version = "0.8", features = ["v4"] }
