[package]
name = "protobuf"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4"
prost = "0.8"
prost-types = "0.8"
schema = { path = "../../schema" }
service = { path = "../../service" }
tonic = "0.5"
uuid = "0.8"

[build-dependencies]
awto = "0.1"
awto-compile = "0.1"
schema = { path = "../../schema" }
service = { path = "../../service" }
